--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fast-csv": "^4.3.6",
     "mongoose": "^6.6.7",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
     "popups": "^1.1.3",
     "sweetalert": "^2.1.2",
     "url": "^0.11.0"
